@@ -172,87 +172,5 @@ void TimeSlider::wheelEvent( QWheelEvent * e ) {
 	e->ignore();
 }
 
-/* ------------------------------------------- */
-
-TimeSliderAction::TimeSliderAction( QWidget * parent )
-	: QWidgetAction(parent)
-{
-}
-
-TimeSliderAction::~TimeSliderAction() {
-}
-
-void TimeSliderAction::setPos(int v) {
-	QList<QWidget *> l = createdWidgets();
-	for (int n=0; n < l.count(); n++) {
-		TimeSlider *s = (TimeSlider*) l[n];
-		s->setPos(v);
-	}
-}
-
-int TimeSliderAction::pos() {
-	QList<QWidget *> l = createdWidgets();
-	if (l.count() >= 1) {
-		TimeSlider *s = (TimeSlider*) l[0];
-		return s->pos();
-	} else {
-		return -1;
-	}
-}
-
-QWidget * TimeSliderAction::createWidget ( QWidget * parent ) {
-	TimeSlider *t = new TimeSlider(parent);
-	connect( t,    SIGNAL(posChanged(int)), 
-             this, SIGNAL(posChanged(int)) );
-	connect( t,    SIGNAL(draggingPos(int)),
-             this, SIGNAL(draggingPos(int)) );
-	return t;
-}
-
-
-VolumeSliderAction::VolumeSliderAction( QWidget * parent )
-	: QWidgetAction(parent)
-{
-}
-
-VolumeSliderAction::~VolumeSliderAction() {
-}
-
-void VolumeSliderAction::setValue(int v) {
-	QList<QWidget *> l = createdWidgets();
-	for (int n=0; n < l.count(); n++) {
-		MySlider *s = (MySlider*) l[n];
-		s->setValue(v);
-	}
-}
-
-int VolumeSliderAction::value() {
-	QList<QWidget *> l = createdWidgets();
-	if (l.count() >= 1) {
-		MySlider *s = (MySlider*) l[0];
-		return s->value();
-	} else {
-		return -1;
-	}
-}
-
-QWidget * VolumeSliderAction::createWidget ( QWidget * parent ) {
-	MySlider *t = new MySlider(parent);
-	t->setMinimum(0);
-	t->setMaximum(100);
-	t->setValue(50);
-	t->setOrientation( Qt::Horizontal );
-	t->setSizePolicy( QSizePolicy::Fixed, QSizePolicy::Fixed );
-	t->setFocusPolicy( Qt::NoFocus );
-	t->setTickPosition( QSlider::TicksBelow );
-	t->setTickInterval( 10 );
-	t->setSingleStep( 1 );
-	t->setPageStep( 10 );
-
-	connect( t,    SIGNAL(valueChanged(int)), 
-             this, SIGNAL(valueChanged(int)) );
-	return t;
-}
-
 
 #include "moc_timeslider.cpp"
